--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Bootstrap Example</title>
+    <title>About Me index</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
@@ -44,7 +46,7 @@
             <div class="col-sm-2"></div>
             <div class="col-12 col-sm-8 text-left main-section">
                 <h1>About Me</h1>
-                <img src="IMG_05072.jpeg" class="img-responsive myimage">
+                <img src="assets/images/IMG_05072.jpeg" class="img-responsive myimage" alt="my picture">
                 <p>Hello, I'm a Radiologist who is looking to explore new career directions using my full-stack web-development skills. I'm hoping to be able to provide these services to companies where someone with both a developer and a medical/biomedical
                     background could give added value to their projects.</p>
                 <div class="col-sm-2"></div>
