--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
             <div class="col-sm-2"></div>
             <div class="col-12 col-sm-8 text-left main-section">
                 <h1>About Me</h1>
-                <img src="assets/images/IMG_05072.jpeg" class="img-responsive myimage" alt="my picture">
-                <p>Hello, I'm a Radiologist who is looking to explore new career directions using my full-stack web-development skills. I'm hoping to be able to provide these services to companies where someone with both a developer and a medical/biomedical
-                    background could give added value to their projects.</p>
+                <div>
+                    <img src="assets/images/IMG_05072.jpeg" class="img-responsive myimage" alt="my picture">
+                    <p>Hello, I'm a Radiologist who is looking to explore new career directions using my full-stack web-development skills. I'm hoping to be able to provide these services to companies where someone with both a developer and a medical/biomedical
+                        background could give added value to their projects.</p>
+                </div>
                 <div class="col-sm-2"></div>
 
             </div>
