--- a/portfolio.html
+++ b/portfolio.html
@@ -54,20 +54,26 @@
                         </a>
                 </div>
                 <div class="work">
-                    <a href="https://mj2112.github.io/unit-4-game.io/"><img src="assets/images/crystals.png" max-width="200" max-height="200" class="auth-img" alt="Skeletal Bones Word Guess">
+                    <a href="https://mj2112.github.io/unit-4-game.io/"><img src="assets/images/crystals.png" max-width="200" max-height="200" class="auth-img" alt="Crystals collector">
 
                         <a href="https://mj2112.github.io/unit-4-game.io/">
                             <h3>Crystals Collector</h3>
                         </a>
                 </div>
                 <div class="work">
-                    <a href="https://mj2112.github.io/trivia-game/"><img src="assets/images/trivia-game.png" max-width="200" max-height="200" class="auth-img" alt="Skeletal Bones Word Guess">
+                    <a href="https://mj2112.github.io/trivia-game/"><img src="assets/images/trivia-game.png" max-width="200" max-height="200" class="auth-img" alt="Astronomy Quiz">
 
                         <a href="https://mj2112.github.io/trivia-game/">
                             <h3>Astronomy Quiz!</h3>
                         </a>
                 </div>
+                <div class="work">
+                    <a href="https://mj2112.github.io/Funny-gifs/"><img src="assets/images/Giftastic.png" max-width="200" max-height="200" class="auth-img" alt="Funny Gifs">
 
+                        <a href="https://mj2112.github.io/Funny-gifs/">
+                            <h3>Funny Gif's!</h3>
+                        </a>
+                </div>
                 <div class="work">
                     <img src="https://via.placeholder.com/200.png" class="auth-img" alt="RPG Game">
 
